Fixed header scaling on mobile

--- a/web/src/pages/what-we-do/what-we-do.module.scss
+++ b/web/src/pages/what-we-do/what-we-do.module.scss
@@ -16,9 +16,13 @@
 }
 
 .heading {
-  margin-top: 200px;
   margin-left: 50px;
   float: left;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .heading-title {
